--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="fonts.css">
+  <link rel="icon" type="image/x-icon" href="http://surfbored.com/favicon.ico" />
 
   <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
 
@@ -38,7 +39,7 @@
 
   <img src="images/drunk-bored.gif" class="bored" width="300" height="225">
 
-  <p><a href="http://owlrat.com" target="_blank">Owlrat</a>, <a href="http://owlrat.com" target="_blank">Owlrat</a>, <a href="http://owlrat.com" target="_blank">Owlrat</a>, McConaughey. Your #surfbort dance moves make Mrs. Carter's eyes glaze over out of boredom.</p>
+  <p><a href="http://owlrat.com" target="_blank">Owlrat, Owlrat, Owlrat</a>, McConaughey. Your #surfbort dance moves make Mrs. Carter's eyes glaze over.</p>
 
   <br><br>
 
@@ -59,7 +60,7 @@
 
   <img src="images/adam-sandler-surfing.gif" class="surf sandler" width="373" height="225">
   <img src="images/grown-bored.gif" class="bored" width="300" height="225">
-  <p>Sandler, this Grown Woman is bored by your sad attempts to be a grown up.</p>
+  <p>Sandler, this Grown Woman is bored by your sad attempts to be a grown up 2.</p>
 
   <br><br>
   <img src="images/mariah-carey-surfing.gif" class="surf mariah" width="300" height="225">
@@ -90,7 +91,7 @@
   <img src="images/zuckerberg-surfing.gif" class="surf zuck" width="197" height="225">
   <img src="images/drunk-jayz-bored.gif" class="bored" width="300" height="225">
 
-  <p>Sorry, Zuckerberg, but you can't acquihire coolness. The Knowles Carter family is bored by you.</p>
+  <p>Sorry Zuckerberg, but you can't acquihire coolness. The Kingdom finds you boring. #crown</p>
 
   <br><br>
 
