--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 </header>
 
 <section class="main">
-  <img src="images/elvis-surfing.gif" class="surf elvis" width="147" height="225">
+  <img src="images/elvis-surfing.gif" class="surf elvis" id="elvis" width="147" height="225">
 
   <img src="images/no-angel-bored.gif" class="bored" width="300" height="225">
 
-  <p>Elvis, you may be The King, but Queen Bey is way bored by your high-waisted trunks.</p>
+  <p >Elvis, you may be The King, but Queen Bey is way bored by your high-waisted trunks.</p>
 
   <br><br>
 
-  <img src="images/lilo-surfing.gif" class="surf lilo" width="193" height="225">
+  <img src="images/lilo-surfing.gif" class="surf lilo"  width="193" height="225">
 
   <img src="images/ghost-bored.gif" class="bored" width="300" height="225">
 
