--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
 
   <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
 
-
   <title>SURFBORED</title>
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-49984823-1', 'surfbored.net');
+    ga('send', 'pageview');
+
+  </script>
 </head>
 <body>
 <header>
@@ -27,7 +37,7 @@
 
   <br><br>
 
-  <img src="images/lilo-surfing.gif" class="surf lilo"  width="193" height="225">
+  <img src="images/Lilo-surfing.gif" class="surf lilo"  width="193" height="225">
 
   <img src="images/ghost-bored.gif" class="bored" width="300" height="225">
 
