--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="fonts.css">
-  <link rel="icon" type="image/x-icon" href="http://surfbored.com/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="http://surfbored.net/favicon.ico" />
 
   <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
 
