Add scroll anchors

--- a/index.html
+++ b/index.html
@@ -11,31 +11,21 @@
 
   <title>SURFBORED</title>
 
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-49984823-1', 'surfbored.net');
-    ga('send', 'pageview');
-
-  </script>
 </head>
 <body>
 <header>
-  <h1><a href="#">SURFBORED</a></h1>
+  <h1><a href="#nun">SURFBORED</a></h1>
 
 </header>
 
-<section class="main">
+<section class="main"><span class="target" id="elvis">&nbsp;</span>
   <img src="images/elvis-surfing.gif" class="surf elvis" id="elvis" width="147" height="225">
 
   <img src="images/no-angel-bored.gif" class="bored" width="300" height="225">
 
   <p >Elvis, you may be The King, but Queen Bey is way bored by your high-waisted trunks.</p>
 
-  <br><br>
+  <br><br><span class="target" id="lilo">&nbsp;</span>
 
   <img src="images/Lilo-surfing.gif" class="surf lilo"  width="193" height="225">
 
@@ -43,7 +33,7 @@
 
   <p>LiLo, this is not even really surfing. BB is bored by your laziness and urges you to work harder.</p>
 
-  <br><br>
+  <br><br><span class="target" id="owlrat">&nbsp;</span>
 
   <img src="images/mcconaughey-surfing.gif" class="surf owlrat" width="249" height="225">
 
@@ -51,7 +41,7 @@
 
   <p><a href="http://owlrat.com" target="_blank">Owlrat, Owlrat, Owlrat</a>, McConaughey. Your #surfbort dance moves make Mrs. Carter's eyes glaze over.</p>
 
-  <br><br>
+  <br><br><span class="target" id="miley">&nbsp;</span>
 
   <img src="images/miley-surfing.gif" class="surf miley" width="300" height="225">
 
@@ -59,69 +49,74 @@
 
   <p>Blue Ivy's mom is so bored by Miley that she longs just to feel anything.</p>
 
-  <br><br>
+  <br><br><span class="target" id="kim">&nbsp;</span>
 
-  <img src="images/kim-kardashian-surfing.gif" class="surf kim" width="204" height="225">
+  <img src="images/kim-kardashian-surfing.gif" id="bey" class="surf kim" width="204" height="225">
   <img src="images/superpower-bored.gif" class="bored" width="300" height="225">
 
   <p>Close your mouth, Kim Kardashian. Beyonc&eacute; is bored by everything you do.</p>
 
-  <br><br>
+  <br><br><span class="target" id="sandler">&nbsp;</span>
 
   <img src="images/adam-sandler-surfing.gif" class="surf sandler" width="373" height="225">
   <img src="images/grown-bored.gif" class="bored" width="300" height="225">
   <p>Sandler, this Grown Woman is bored by your sad attempts to be a grown up 2.</p>
 
-  <br><br>
+  <br><br><span class="target" id="mariah">&nbsp;</span>
+
   <img src="images/mariah-carey-surfing.gif" class="surf mariah" width="300" height="225">
   <img src="images/yonce-bored.gif" class="bored" width="300" height="225">
 
-
   <p>Even Mimi's dogs are so bored they need to emancipate.</p>
 
-  <br><br>
+  <br><br><span class="target" id="zoe">&nbsp;</span>
+
   <img src="images/zoe-saldana-surfing.gif" class="surf zoe" width="300" height="225">
   <img src="images/jealous2-bored.gif" class="bored" width="300" height="225">
 
   <p>Cheers, Zoe. Your award is so pedestrian that the entire 3rd Ward is bored.</p>
 
-  <br><br>
+  <br><br><span class="target" id="dog">&nbsp;</span>
+
   <img src="images/dog-surfing.gif" class="surf dog" width="300" height="225">
 
   <img src="images/pretty-hurts-bored.gif" class="bored" width="300" height="225">
   <p>Beyonc&eacute;'s dog would never fall off. Nice try, chubs.</p>
 
-  <br><br>
+  <br><br><span class="target" id="kelly">&nbsp;</span>
 
   <img src="images/kelly-surfing.gif" class="surf kelly" width="300" height="225">
   <img src="images/partition-bored.gif" class="bored" width="300" height="225">
   <p>Kelly, you may be a big part of <a href="http://www.beyonce.com/tumblr/mylife" target="_blank">#mylife</a>, but your attempts at surfing leave Yonc&eacute; wanting more.</p>
 
-  <br><br>
+  <br><br><span class="target" id="zuck">&nbsp;</span>
+
   <img src="images/zuckerberg-surfing.gif" class="surf zuck" width="197" height="225">
   <img src="images/drunk-jayz-bored.gif" class="bored" width="300" height="225">
 
   <p>Sorry Zuckerberg, but you can't acquihire coolness. The Kingdom finds you boring. #crown</p>
 
-  <br><br>
+  <br><br><span class="target" id="woody">&nbsp;</span>
 
   <img src="images/woody-surfing.gif" class="surf woody" width="174" height="225">
   <img src="images/pretty-bored.gif" class="bored" width="300" height="225">
   <p>Please don't bore Sasha Fierce with your surfing attempts, Woody. Your time would be better spent bro-ing out with <a href="http://owlrat.com" target="_blank">McConaughey</a></p>
 
-  <br><br>
+  <br><br><span class="target" id="tyler">&nbsp;</span>
 
   <img src="images/tyler-surfing.gif" class="surf tyler" width="243" height="225">
   <img src="images/superpower2-bored.gif" class="bored" width="300" height="225">
 
   <p>I DO want to close my eyes, Steven Tyler. I really do.</p>
-  <br><br>
+
+  <br><br><span class="target" id="headstand">&nbsp;</span>
+
   <img src="images/headstand-surfing.gif" class="surf headstand" width="300" height="225">
   <img src="images/haunted-bored.gif" class="bored" width="300" height="225">
 
   <p>It's cool you can do a headstand, but BeBe has seen weirder.</p>
 
-  <br><br>
+  <br><br><span class="target" id="nun">&nbsp;</span>
 
 
   <img src="images/nun-surfing.gif" class="surf nun" width="300" height="225">
