Change order of tiles

--- a/index.html
+++ b/index.html
@@ -18,20 +18,12 @@
 
 </header>
 
-<section class="main"><span class="target" id="elvis">&nbsp;</span>
-  <img src="images/elvis-surfing.gif" class="surf elvis" id="elvis" width="147" height="225">
+<section class="main">
 
-  <img src="images/no-angel-bored.gif" class="bored" width="300" height="225">
+  <img src="images/tyler-surfing.gif" class="surf tyler" width="243" height="225">
+  <img src="images/superpower2-bored.gif" class="bored" width="300" height="225">
 
-  <p >Elvis, you may be The King, but Queen Bey is way bored by your high-waisted trunks.</p>
-
-  <br><br><span class="target" id="lilo">&nbsp;</span>
-
-  <img src="images/Lilo-surfing.gif" class="surf lilo"  width="193" height="225">
-
-  <img src="images/ghost-bored.gif" class="bored" width="300" height="225">
-
-  <p>LiLo, this is not even really surfing. BB is bored by your laziness and urges you to work harder.</p>
+  <p>I DO want to close my eyes, Steven Tyler. I really do.</p>
 
   <br><br><span class="target" id="owlrat">&nbsp;</span>
 
@@ -40,6 +32,14 @@
   <img src="images/drunk-bored.gif" class="bored" width="300" height="225">
 
   <p><a href="http://owlrat.com" target="_blank">Owlrat, Owlrat, Owlrat</a>, McConaughey. Your #surfbort dance moves make Mrs. Carter's eyes glaze over.</p>
+
+  <br><br><span class="target" id="lilo">&nbsp;</span>
+
+  <img src="images/Lilo-surfing.gif" class="surf lilo"  width="193" height="225">
+
+  <img src="images/ghost-bored.gif" class="bored" width="300" height="225">
+
+  <p>LiLo, this is not even really surfing. BB is bored by your laziness and urges you to work harder.</p>
 
   <br><br><span class="target" id="miley">&nbsp;</span>
 
@@ -102,13 +102,6 @@
   <img src="images/pretty-bored.gif" class="bored" width="300" height="225">
   <p>Please don't bore Sasha Fierce with your surfing attempts, Woody. Your time would be better spent bro-ing out with <a href="http://owlrat.com" target="_blank">McConaughey</a></p>
 
-  <br><br><span class="target" id="tyler">&nbsp;</span>
-
-  <img src="images/tyler-surfing.gif" class="surf tyler" width="243" height="225">
-  <img src="images/superpower2-bored.gif" class="bored" width="300" height="225">
-
-  <p>I DO want to close my eyes, Steven Tyler. I really do.</p>
-
   <br><br><span class="target" id="headstand">&nbsp;</span>
 
   <img src="images/headstand-surfing.gif" class="surf headstand" width="300" height="225">
@@ -118,13 +111,17 @@
 
   <br><br><span class="target" id="nun">&nbsp;</span>
 
-
   <img src="images/nun-surfing.gif" class="surf nun" width="300" height="225">
   <img src="images/mine-bored.gif" class="bored" width="300" height="225">
 
   <p>Don't make a habit out of boring Destiny's Child. #callthatreverend</p>
 
-  <br><br>
+  <br><br><span class="target" id="elvis">&nbsp;</span>
+  <img src="images/elvis-surfing.gif" class="surf elvis" id="elvis" width="147" height="225">
+
+  <img src="images/no-angel-bored.gif" class="bored" width="300" height="225">
+
+  <p >Elvis, you may be The King, but Queen Bey is way bored by your high-waisted trunks.</p>
 
 
 <!--   <img src="images/xo-bored.gif" class="bored" width="300" height="225">
