Update gif order

--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
 
 <section class="main">
 
+  <span class="target" id="kim">&nbsp;</span>
+
+  <img src="images/kim-kardashian-surfing.gif" id="bey" class="surf kim" width="204" height="225">
+  <img src="images/superpower-bored.gif" class="bored" width="300" height="225">
+
+  <p>Close your mouth, Kim Kardashian. Beyonc&eacute; is bored by everything you do, including your sad surfing.</p>
+
+  <br><br><span class="target" id="tyler">&nbsp;</span>
+
   <img src="images/tyler-surfing.gif" class="surf tyler" width="243" height="225">
   <img src="images/superpower2-bored.gif" class="bored" width="300" height="225">
 
@@ -48,13 +57,6 @@
   <img src="images/blue-bored.gif" class="bored" width="300" height="225">
 
   <p>Blue Ivy's mom is so bored by Miley that she longs just to feel anything.</p>
-
-  <br><br><span class="target" id="kim">&nbsp;</span>
-
-  <img src="images/kim-kardashian-surfing.gif" id="bey" class="surf kim" width="204" height="225">
-  <img src="images/superpower-bored.gif" class="bored" width="300" height="225">
-
-  <p>Close your mouth, Kim Kardashian. Beyonc&eacute; is bored by everything you do.</p>
 
   <br><br><span class="target" id="sandler">&nbsp;</span>
 
