--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <header>
-  <h1><a href="#nun">SURFBORED</a></h1>
+  <h1><a href="http://surfbored.net">SURFBORED</a></h1>
 
 </header>
 
